--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,8 +11,9 @@ body {
     font-family: Overpass, sans-serif;
     color: #F8F0E3;
     background-image: url('/assets/images/Background-image-01.jpg');
-    background-position: center absolute no-repeat;
+    background-position: center absolute;
     background-size: cover;
+    background-repeat: no-repeat;
     padding: 25px;
 }
 
