--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,8 +110,11 @@ footer {
 
 #photos {
     border: 1px solid #F8F0E3;
+    padding: 5px;
 }
 
 #photos img {
-    border: 1px dashed #F8F0E3;
+    border: 2px solid #F8F0E3;
+    display: inline-flex;
+    padding: 2px;
 }
