--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,7 +93,7 @@ footer {
 .social-media {
     text-align: center;
     text-decoration: none;
-    padding-top: 150px;
+    padding-top: 100px;
     letter-spacing: 5px;
 }
 
@@ -123,6 +123,7 @@ footer {
 
 #contact-us {
     text-align: center;
+    font-size: 30px;
 }
 
 #name {
@@ -131,4 +132,8 @@ footer {
 
 #email-input {
     padding: 5px;
+}
+
+.clear {
+    background-color: coral;
 }
