--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@
 body {
     font-family: Overpass, sans-serif;
     color: #F8F0E3;
-    background-image: url('../images/Background-image-01.jpg');
+    background-image: url('css/images/Background-image-01.jpg');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
