--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,22 +112,34 @@ footer {
 
 /*gallery*/
 
-#photos {
-    margin-top: 10px;
+.photos {
     border: 1px solid #F8F0E3;
-    padding: 5px;
+
+    /*code from https://dcode.domenade.com*/
+    --gap: 16px;
+    --num-cols: 4;
+    --row-height: 300px;
+
+    box-sizing: border-box;
+    padding: var(--gap);
+
+    display: grid;
+    grid-template-columns: repeat(var(--num-cols), 1fr);
+    grid-auto-rows: var(--row-height);
+    gap: var(--gap);
 }
 
-#photos img {
+.photos > img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.photos img {
     border: 2px solid #F8F0E3;
     display: inline-block;
     padding: 2px;
 }
 
-img {
-    width: 20vw;
-    height: 25vh;
-}
 
 /*contact us*/
 
@@ -174,17 +186,18 @@ img {
 @media screen and (max-width: 1200px) {
 
     /*Gallery*/
-
-    #photos img {
-        display: inline-block;
+    .photos {
+        --num-cols: 4;
+        --row-height: 300px;
     }
    }
 
    /*Media query 800px*/
 @media screen and (max-width: 800px) {
     /*Gallery*/
-    #photos img {
-        display: inline-block; 
+    .photos {
+        --num-cols: 2;
+        --row-height: 200px;
     }
 }
 
@@ -213,7 +226,8 @@ img {
  
      /*gallery*/
 
-     #photos img {
-        display: inline-block;
+     .photos {
+        --num-cols: 2;
+        --row-height: 200px;
      }
  }
