Style contact us form

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -142,48 +142,37 @@ footer {
 
 /*Contact us*/
 
+.container {
+    border-radius: 5px;
+    padding: 20px;
+}
+
+intput[type=text], textarea {
+    width: 100%;
+    padding: 12px;
+    border: 2px solid #F8F0E3;
+    border-radius: 5px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: vertical;
+}
+
 #contact-us {
     text-align: center;
     font-size: 30px;
-    width: 100%;
-    padding: 12px;
-    border: 2px solid #F8F0E3;
-    border-radius: 5px;
-    box-sizing: border-box;
-    margin-top: 6px;
-    margin-bottom: 16px;
-    resize: vertical;
 }
 
 #name {
-    width: 100%;
-    padding: 12px;
-    box-sizing: border-box;
-    margin-top: 6px;
-    margin-bottom: 16px;
-    resize: vertical;
+text-align: center;
 }
 
 #email-input {
-    width: 100%;
-    padding: 12px;
-    border: 2px solid #F8F0E3;
-    border-radius: 5px;
-    box-sizing: border-box;
-    margin-top: 6px;
-    margin-bottom: 16px;
-    resize: vertical;
+    text-align: center;
 }
 
 #your-request {
-    width: 100%;
-    padding: 12px;
-    border: 2px solid #F8F0E3;
-    border-radius: 5px;
-    box-sizing: border-box;
-    margin-top: 6px;
-    margin-bottom: 16px;
-    resize: vertical;
+    text-align: center;
 }
 
 .submit {
