--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -145,9 +145,9 @@ footer {
     font-family: Overpass, sans-serif;
     color: #F8F0E3;
     letter-spacing: 2px;
-    padding-top: 10px;
-    float: right;
-    font-size: 200%;
+    padding-top: 15px;
+    float: left;
+    font-size: 120%;
 }
 
 #image-copyright p {
